syntax = "proto3";

package PhotoManagament;

option go_package = "github.com/tolgazorlu/photo-analysis/proto";


message UploadImageRequest {
  bytes image_data = 1;
  string filename = 2;
}

message UploadImageResponse {
  string image_id = 1;
}
service PhotoManagement {
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);
}
